# deep_agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: demo_debug_travel.py
backend/src/personalops_agent/: __init__.py  config.py  main.py
backend/src/personalops_agent/agent/: __init__.py  backend.py  factory.py  memory.py  prompts.py
backend/src/personalops_agent/api/: app.py  streaming.py
backend/src/personalops_agent/schemas/: chat.py  travel.py
backend/src/personalops_agent/storage/: __init__.py  memory.py  mongo.py
backend/src/personalops_agent/tools/: __init__.py  amap_mcp.py  exchange.py  models.py  search.py  weather.py
backend/tests/: test_agent_backend.py  test_agent_factory.py  test_amap_mcp.py  test_api.py  test_config.py  test_storage.py  test_streaming.py  test_tools.py  test_travel_schema.py
docs/plans/phase-02b-thread-short-term-memory/: PLANS.md
docs/plans/phase-03-backend-integration/: PLANS.md
docs/plans/phase-04-skills-ppt-generator/: PLANS.md
docs/plans/phase-05-artifact-api-ux/: PLANS.md
docs/plans/phase-06-poster-generator/: PLANS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/api/: chat.js
frontend/src/lib/: stream.js
frontend/tests/: stream.test.js
